style/fix: aside con z-index de 12 se superpone a la pasarella de pago

--- a/src/styles/shopping-cart.css
+++ b/src/styles/shopping-cart.css
@@ -19,7 +19,7 @@ aside#carrito {
   color: black;
   display: flex;
   flex-direction: column;
-  z-index: 12;
+  z-index: 2;
   overflow-y: auto;
   margin: 0px;
   padding: 0px;
